tests/ui/resolve/issue-117920.stderr
error[E0433]: cannot find module `super` in this scope
  --> $DIR/issue-117920.rs:3:5
   |
LL | use super::A;
   |     ^^^^^ can't use `super` on the crate root, there are no further modules to go "up" to

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
